[package]
name = "meerkat-hooks"
description = "Hook runtime adapters and default hook engine for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
meerkat-core = { workspace = true }
meerkat-contracts = { workspace = true }
meerkat-skills = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
portable-atomic = "1.11"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "espidf")))'.dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }

[target.'cfg(target_os = "espidf")'.dependencies]
tokio = { version = "1.43", default-features = false, features = ["macros", "sync", "time", "rt", "io-util"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }

[lints]
workspace = true
