[package]
name = "meerkat-live"
description = "Live audio/text transport for Meerkat — composable WebSocket bridge between clients and LiveAdapterHost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
meerkat-core = { workspace = true }
meerkat-contracts = { workspace = true }
meerkat-llm-core = { workspace = true }
meerkat-runtime = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.29"
futures = { workspace = true }
