load("@crates//:defs.bzl", "aliases", "all_crate_deps")

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro", "rust_test")



filegroup(

    name = "cargo_manifest",

    srcs = ["Cargo.toml"],

    visibility = ["//visibility:public"],

)



filegroup(

    name = "package_runfiles",

    srcs = glob(["Cargo.toml", "**/*"], exclude = ["BUILD", "BUILD.bazel"], allow_empty = True),

    visibility = ["//visibility:public"],

)



rust_library(
    name = "meerkat_llm_core",
    aliases = aliases(package_name = "meerkat-llm-core"),
    crate_name = "meerkat_llm_core",
    crate_root = "src/lib.rs",
    crate_features = [],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_MANIFEST_DIR": "./meerkat-llm-core",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-llm-core",
        proc_macro = True,
    ),
    deps = [
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
    ] + all_crate_deps(
        package_name = "meerkat-llm-core",
        normal = True,
    ),
)

rust_library(
    name = "meerkat_llm_core_agent_factory_build",
    aliases = aliases(package_name = "meerkat-llm-core"),
    crate_name = "meerkat_llm_core",
    crate_root = "src/lib.rs",
    crate_features = [],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = [
        "//meerkat:__pkg__",
    ],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_MANIFEST_DIR": "./meerkat-llm-core",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-llm-core",
        proc_macro = True,
    ),
    deps = [
        "//meerkat:meerkat_contracts_agent_factory_build",
        "//meerkat:meerkat_core_agent_factory_build",
    ] + all_crate_deps(
        package_name = "meerkat-llm-core",
        normal = True,
    ),
)

rust_test(
    name = "meerkat_llm_core_unit_test",
    aliases = aliases(
        package_name = "meerkat-llm-core",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "meerkat_llm_core",
    crate_root = "src/lib.rs",
    crate_features = [],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_MANIFEST_DIR": "./meerkat-llm-core",
    },
    tags = [
        "fast",
        "unit",
    ],
    size = "small",
    data = [
        ":package_runfiles",
    ],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-llm-core",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
    ] + all_crate_deps(
        package_name = "meerkat-llm-core",
        normal = True,
        normal_dev = True,
    ),
)

test_suite(
    name = "fast_tests",
    tests = [
        ":meerkat_llm_core_unit_test",
    ],
)
